# disk-analyzer

./: Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  lib.rs  main.rs  model.rs  platform.rs  scanner.rs  ui.rs
src/app/: actions.rs  theme.rs  views.rs
src/scanner/: windows_find.rs
